updated index.Html with new CSS & bootstrap

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Portfolio</title>
-    <!-- reset CSS then apply our Style -->
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <!-- bootstrap -->
+    <title>Nick Verneck's Portfolio</title>
+    <!-- Fonts -->
+    <!-- Google Fonts -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
     />
+
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+   
+    <!-- CSS -->
+  <link href="./assets/css/aos.css" rel="stylesheet">
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/css/bootstrap-icons.css" rel="stylesheet">
+  <link href="./assets/css/boxicons.min.css" rel="stylesheet">
+  <link href="./assets/css/glightbox.min.css" rel="stylesheet">
+  <link href="./assets/css/swiper-bundle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
