--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <img src="./assets/images/avatar.png" alt="" class="img-fluid rounded-circle">
       <h1 class="text-light"><a href="index.html">Nick Verneck</a></h1>
       <div class="social-links mt-3 text-center">
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/nickverneck/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nicollas-verneck-1727971a9/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
 
@@ -146,5 +146,14 @@
         </div>
       </section>
     </main>
+   <!-- Vendor JS Files -->
+   <script src="assets/vendor/aos/aos.js"></script>
+   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+   <script src="assets/vendor/php-email-form/validate.js"></script>
+   <script src="assets/vendor/purecounter/purecounter.js"></script>
+   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+   <script src="assets/vendor/typed.js/typed.min.js"></script>
   </body>
 </html>
